--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "16.0.1",
     "express": "^4.18.1",
     "express-openid-connect": "^2.15.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "1.10.0",
     "sequelize": "6.20.1",
     "sqlite3": "5.0.8"
